--- a/src/components/Seeker.module.css
+++ b/src/components/Seeker.module.css
@@ -51,7 +51,7 @@
 }
 
 .Container{
-    background-image: url("../images/bra.jpg");
+    background-image: url(https://i.imgur.com/WLEgXOs.jpg);
     background-attachment: local;
     background-position: center center;
     background-size: cover;
@@ -112,7 +112,7 @@
 
 .invocador{
     background-attachment: inherit;
-    background-image: url(../images/ff.jpg);
+    background-image: url(https://i.imgur.com/GILfsee.jpg);
     background-size: 20% 90%;
     background-position: center center;
     background-repeat: no-repeat;
