--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -25,7 +25,7 @@
 .container{
     position: relative;
     width: 100%;
-    min-height: 82vh;
+    height: 100vh;
     background-color: rgb(10, 10, 10);
     bottom: 0;
 }
@@ -54,6 +54,7 @@ a{
     cursor: pointer;
     font-family: "FF Mark W05",Arial,sans-serif;
     margin: 0 15px 0 15px;
+    text-decoration: none;
 }
 
 .EfectoA{
@@ -167,3 +168,48 @@ a{
     line-height: 150%;
     font-family: "FF Mark W05",Arial,sans-serif;
 }
+
+@media screen and (max-width: 576px){
+    .Nav{
+        font-weight: 550;
+        font-size: 7px;
+    }
+
+    .Range{
+        margin-top: 100px;
+    }
+
+    .text{
+        font-size: 10px;
+    }
+  }
+  
+  @media screen and (min-width: 576px){
+    .Nav{
+        font-weight: 550;
+        font-size: 9px;
+    }
+
+    .Range{
+        margin-top: 100px;
+    }
+
+    .text{
+        font-size: 10px;
+    }
+  }
+  
+  @media screen and (min-width: 768px){
+    .Nav{
+        font-weight: 550;
+        font-size: 11px;
+    }
+
+    .Range{
+        margin-top: 100px;
+    }
+
+    .text{
+        font-size: 11px;
+    }
+  }
