--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -10,6 +10,7 @@
 
 .Container{
   background-color: rgb(255, 255, 255);
+  width: 100%;
 }
 
 .space{
@@ -59,8 +60,8 @@
 
 .Lol{
   margin-bottom: 100px;
-  width: 40vw;
-  height: 40vh;
+  width: 100%;
+  height: 100%;
   transition: transform .9s; 
 }
 
@@ -179,8 +180,8 @@
 
 .Bar{
   border-radius: 0 10px 0 10px;
-  width: 80vw;
-  height: 65px;
+  width: 80%;
+  height: 100%;
   background-color: rgb(0, 24, 32);
   display: block;
   align-items: center;
@@ -241,45 +242,6 @@ h3{
   width: 50%;
   height: 60px;
 }
-
-.Section4{
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  width: 100vw;
-  height: 100vh;
-  background-image: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.896796218487395) 5%, rgba(10,10,10,0.04245448179271705) 15%, rgba(10,10,10,0.04) 85%, rgba(0,0,0,0.9) 95%, rgba(0,0,0,0.9360119047619048) 100%),url(https://i.imgur.com/2APGniE.png);
-  background-attachment: local;
-  background-position: center center;
-  background-size: cover;
-  position: relative;
-}
-
-.Seeker{
-  display: inline-block;
-  text-align: center;
-  justify-content: center;
-  margin-left: 30px;
-  align-items: center;
-  width: 30vw;
-  height: 40vh;
-  vertical-align:top;
-}
-
-.Seeker h2{
-  font-size: 350%;
-  letter-spacing: 5px;
-  color: rgb(255, 255, 255);
-  text-transform:uppercase;
-  font-family: "FrizQuadrataMedium";
-  font-style: italic;
-  margin: 0;
-}
-
-.Con_Boton{
-  position:relative;
-}
-
 
 .Guia{
   align-items: center;
@@ -411,7 +373,7 @@ h4{
 }
 
 .Invocadores{
-    display: inline-flex;
+  display: inline-flex;
 	align-items: center;
 	justify-content: center;
 	width: 150px;
@@ -579,7 +541,6 @@ h4{
     width: 80%;
     height: 80%;
     position: relative;
-    left: -100px;
 }
 
 .Ccards{
@@ -699,7 +660,127 @@ h4{
     text-shadow: 0px 0px 6px #000000;
 }
 
+.Champ_titl{
+  width: 100%;
+}
+
 .icono{
     width: 100px;
     height: 100px;
+}
+
+@media screen and (max-width: 576px){
+  .Section1{
+    height: 100vh;
+  }
+
+  .Titulo{
+    width: 70vw;
+    height: 20vh;
+  }
+
+  .CNoticias{
+    flex-direction: column;
+  }
+
+  .TitC{
+    font-size: 40px;
+  }
+
+  .Bar{
+    height: 90px;
+  }
+  .Cont_Bar{
+    flex-direction: column;
+  }
+  .Txt{
+    font-size: 10px;
+    border-right: none;
+    margin-right: 0;
+    padding: 0;
+  }
+  .Icons{
+    margin: 0px auto;
+    padding: 0px 20px;
+    text-align: center;
+  }
+  .Alink{
+    margin: 0;
+  }
+
+  .Cabeza{
+    font-size: 36px;
+  }
+  .Divi{
+    margin-bottom: 40px;
+    width: 80%;
+    height: 30px;
+  }
+
+  .CNoticias{
+    height: 100%;
+  }
+  .Noticias{
+    width: 100%;
+  }
+  .Titulos{
+    font-size: 20px;
+  }
+  .Parrafos{
+    font-size: 10px;
+  }
+
+  .Section6{
+    margin-top: 15px;
+    height: 40vh;
+  }
+
+  .Section7{
+    height: 200vh;
+  }
+  .Ccards{
+    flex-direction: column;
+  }
+  .Cards{
+    width: 100%;
+    margin: 10px 0 10px 0;
+  }
+
+  .Skins{
+    width: 85%;
+    height: 90%;
+  }
+  .SkinsC{
+    right: inherit;
+    margin-right: inherit;
+  }
+  .subTS{
+    font-size: 10px;
+  }
+  .TitS{
+    font-size: 50px;
+  }
+  .TextS{
+    font-size: 8px;
+  }
+
+  .Seeker{
+    width: 50%;
+    height: 0;
+    margin-left: 15px;
+    bottom: 0;
+  }
+  .Seeker h2{
+    font-size: 150%;
+  }
+}
+
+@media screen and (min-width: 576px){
+  .Titulo{
+    
+  }
+}
+
+@media screen and (min-width: 768px){
+  
 }
