--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -81,7 +81,7 @@ hr{
     align-items: center;
     color: aliceblue;
     position: relative;
-    margin-left: 5%;
+    padding-left: 5%;
     font-weight: 550;
     font-size: 11px;
 }
@@ -114,4 +114,20 @@ a{
 .li:hover::before {
     transform-origin: left;
     transform: scaleX(1);
-  }
+}
+
+@media screen and (max-width: 430px){
+  .Links{
+    flex-direction: column;
+    height: 100vh;
+    width: 60%;
+}
+}
+  
+@media screen and (min-width: 430px){
+    
+}
+  
+@media screen and (min-width: 768px){
+
+}
